--- a/my_page.html
+++ b/my_page.html
@@ -1,24 +1,24 @@
-! DOCTYPE html>
+<! DOCTYPE html>
 <html>
 <body>
 <h1> Hey there!!! 👋 </h1>
-<p> Hey!👋
-I am Pavithra, doing my Master of Machine Learning program. I am a passionate learner who has an interest in the field of AI (Artificial Intelligence).
 
-I love:
+<p> I am Pavithra, doing my Master of Machine Learning program. I am a passionate learner who has an interest in the field of AI (Artificial Intelligence). </p>
+
+<p> I love:
 📚 reading books
 👩‍🎨 doing art and craftworks
 🎹 playing keyboard
-🎥 watching sci-fi movies
+🎥 watching sci-fi movies</p>
 
-📍 Where am I located?
-Chennai, Tamil Nadu, India 🇮🇳
+<p>📍 Where am I located?
+Chennai, Tamil Nadu, India 🇮🇳</p>
 
-🕙 My timezone is GMT+5:30
+<p>🕙 My timezone is GMT+5:30</p>
 
-👉 I have transformed my life and can do the same for you. I am happy to support you guys at any time.
+<p>👉 I have transformed my life and can do the same for you. I am happy to support you guys at any time.</p>
 
-If you are curious to know my learning journey or need some support in your program, then you're in the right spot 🎯!!
+<p>If you are curious to know my learning journey or need some support in your program, then you're in the right spot 🎯!!</p>
 </p>
 </body>
 </html>
